--- a/HTML/topia.html
+++ b/HTML/topia.html
@@ -17,7 +17,7 @@
 
         <nav class="nav-bar">
             <div class="logo">
-                <img src="../img-form/topia_fundo.png" alt="logo">
+               <a href="../index.html"> <img src="../img-form/topia_fundo.png" alt="logo"></a>
             </div>
             <div class="nav-list">
                 <ul>
@@ -37,12 +37,12 @@
         </nav>
         <div class="mobile-menu">
             <ul>
-                <li class="nav-item"><a href="#Equipe" class="nav-link">Nossa Equipe</a></li>
-                <li class="nav-item"><a href="#T" class="nav-link">Nossos Trabalhos</a></li>
-                <li class="nav-item"><a href="#Desafio" class="nav-link">DESAFIO REDUSEDECOR</a></li>
-                <li class="nav-item"><a href="#Escritorio" class="nav-link">Conheça a Fluxus</a></li>
-                <li class="nav-item"><a href="#CLIENTES" class="nav-link">Relação com o cliente</a></li>
-                <li class="nav-item"><a href="#e" class="nav-link">Estamos Contratando</a></li>
+                <li class="nav-item"><a href="#t2" class="nav-link">Nossa História</a></li>
+                <li class="nav-item"><a href="#mvv" class="nav-link">Missão, Visão e Valores</a></li>
+                <li class="nav-item"><a href="#t" class="nav-link">Projetos Sociais</a></li>
+                <li class="nav-item"><a href="#mvv2" class="nav-link">ODS</a></li>
+                <li class="nav-item"><a href="#CLIENTES" class="nav-link">Relação com o Cliente</a></li>
+                <li class="nav-item"><a href="#e" class="nav-link">Conheça Nossa Loja</a></li>
             </ul>
 
 
@@ -447,13 +447,13 @@
                     <h3>Sobre Nós</h3>
                 </li>
                 <li>
-                    <a href="#init" class="footer-link">Historia</a>
+                    <a href="#t2" class="footer-link">Historia</a>
                 </li>
                 <li>
-                    <a href="#proj" class="footer-link">Missão, Vissão e Valores</a>
+                    <a href="#mvv" class="footer-link">Missão, Vissão e Valores</a>
                 </li>
                 <li>
-                    <a href="#proj" class="footer-link">Visão</a>
+                    <a href="#mvv2" class="footer-link">Visão</a>
                 </li>
             </ul>
 
@@ -462,13 +462,13 @@
                     <h3>Projetos</h3>
                 </li>
                 <li>
-                    <a href="#Projeto" class="footer-link">Topia</a>
+                    <a href="#t" class="footer-link">Topia + Vagalume</a>
                 </li>
                 <li>
-                    <a href="#TARANTINO" class="footer-link">Tarantino</a>
+                    <a href="#Desafio" class="footer-link">Topia nas Escolas</a>
                 </li>
                 <li>
-                    <a href="#Desafio" class="footer-link">Reusedecor</a>
+                    <a href="#Projeto" class="footer-link">Topia + Rio Grande do Sul</a>
                 </li>
             </ul>
 
@@ -493,7 +493,7 @@
         </div>
     </footer>
 
-<script src="../JS/topia.js"></script>
+<script src="../JS/CEP.js"></script>
 </body>
 
 </html>
