--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
                         <a href="#specs" class="nav__link">Sobre</a>
                     </li>
                     <li class="nav__item">
-                        <a href="#case" class="nav__link">Vião Guia</a>
+                        <a href="#case" class="nav__link">Visão Guia</a>
                     </li>
                     <li class="nav__item">
                         <a href="HTML/CEP_TOPIA.html" class="nav__link">Comprar</a>
                     </li>
                     <li class="nav__item">
-                        <a id="cadastro" href="/HTML/topia.html"  class="nav__link">Sobre a Topia</a>
+                        <a id="cadastro" href="/HTML/topia.html" class="nav__link">Sobre a Topia</a>
                     </li>
                 </ul>
 
@@ -119,7 +119,7 @@
                             <span class="button--flex">
                                 <i class="ri-shopping-bag-line button__icon"></i></i> Adicionar ao Carrinho
                             </span>
-                            <span class="home__price">$299</span>
+                            <span class="home__price">Saiba Mais</span>
                         </a>
                     </div>
                 </div>
@@ -137,6 +137,7 @@
         </section>
 
         <!--=============== ESPECIFICAÇÕES ===============-->
+
         <section class="specs section grid" id="specs">
             <h2 class="section__title section__title-gradient">Especificações</h2>
 
@@ -144,7 +145,7 @@
                 <div class="specs__content grid">
                     <div class="specs__data">
                         <img class="icon-fone" src="img/icon_fones.png" alt="">
-                
+
                         <h3 class="specs__title">Conexão</h3>
                         <span class="specs__subtitle">Bluetooth v5.2</span>
                     </div>
@@ -165,12 +166,13 @@
                         <i class="ri-mic-line specs__icon"></i>
                         <h3 class="specs__title">Microfone</h3>
                         <span class="specs__subtitle">Compatível com Apple Siri <br> e Google</span>
+
                     </div>
                 </div>
-
                 <div>
                     <img src="oculos_carol2.png" alt="" class="specs__img">
                 </div>
+
             </div>
         </section>
 
@@ -332,7 +334,7 @@
                 <ul class="footer__links">
                     <li>
                         <a href="#" class="footer__link">Óculos</a>
-                    </li>  
+                    </li>
                 </ul>
             </div>
 
@@ -399,7 +401,7 @@
     <script src="https://www.chatbase.co/embed.min.js" chatbotId="mVOdLJiu4c5v0_G8SFC47" domain="www.chatbase.co" defer>
     </script>
 
-<!-- <iframe src="https://www.chatbase.co/chatbot-iframe/mVOdLJiu4c5v0_G8SFC47" width="100%"
+    <!-- <iframe src="https://www.chatbase.co/chatbot-iframe/mVOdLJiu4c5v0_G8SFC47" width="100%"
 style="height: 100%; min-height: 700px" frameborder="0"></iframe> -->
 
     <!--=============== SCROLL REVEAL ===============-->
