salvando alterações novas

--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
                         <a href="#specs" class="nav__link">Sobre</a>
                     </li>
                     <li class="nav__item">
-                        <a href="#case" class="nav__link">Vião Guia</a>
+                        <a href="#case" class="nav__link">Visão Guia</a>
                     </li>
                     <li class="nav__item">
                         <a href="HTML/CEP_TOPIA.html" class="nav__link">Comprar</a>
                     </li>
                     <li class="nav__item">
-                        <a id="cadastro" href="/HTML/topia.html"  class="nav__link">Sobre a Topia</a>
+                        <a id="cadastro" href="https://call.whatsapp.com/video/iNreqgtTvzvaK8GD1HW0Fu" class="nav__link">Consultar especialista</a>
                     </li>
                 </ul>
 
@@ -86,11 +86,6 @@
     </header>
 
     <main class="main">
-
-        <!-- <span class="uiiw">
-            <img data-uw-rm-ignore="" class="ui_w" role="presentation" alt=""
-                src="https://cdn.userway.org/widget.js"data-account="9CZfRZ38Rp">
-        </span> -->
 
         <script src="https://cdn.userway.org/widget.js" data-account="9CZfRZ38Rp"></script>
 
@@ -144,7 +139,7 @@
                 <div class="specs__content grid">
                     <div class="specs__data">
                         <img class="icon-fone" src="img/icon_fones.png" alt="">
-                
+
                         <h3 class="specs__title">Conexão</h3>
                         <span class="specs__subtitle">Bluetooth v5.2</span>
                     </div>
@@ -198,14 +193,14 @@
         <section class="discount section">
             <div class="discount__container container grid">
                 <div class="discount__animate">
-                    <h2 class="discount__title">Explore os cantos mais <br> distantes</h2>
+                    <h2 class="discount__title">Veja além dos obstáculos <br>caminhe com confiança</h2>
                     <p class="discount__description">Obtenha agora, até 50% de desconto.</p>
                     <a href="form.html" class="button button--flex">
                         <i class="ri-shopping-bag-line button__icon"></i> Compre agora
                     </a>
                 </div>
 
-                <!-- <img src="img/discount.png" alt="" class="discount__img"> -->
+                <!-- <img src="capa_carol.png" alt="" class="discount__img"> -->
             </div>
         </section>
 
@@ -332,7 +327,7 @@
                 <ul class="footer__links">
                     <li>
                         <a href="#" class="footer__link">Óculos</a>
-                    </li>  
+                    </li>
                 </ul>
             </div>
 
@@ -392,15 +387,19 @@
     <!--=============== CHAT IA ===============-->
     <script>
         window.embeddedChatbotConfig = {
-            chatbotId: "mVOdLJiu4c5v0_G8SFC47",
-            domain: "www.chatbase.co"
+        chatbotId: "E1jSPw4PdfR0c_OE-8kWS",
+        domain: "www.chatbase.co"
         }
-    </script>
-    <script src="https://www.chatbase.co/embed.min.js" chatbotId="mVOdLJiu4c5v0_G8SFC47" domain="www.chatbase.co" defer>
-    </script>
+        </script>
+        <script
+        src="https://www.chatbase.co/embed.min.js"
+        chatbotId="E1jSPw4PdfR0c_OE-8kWS"
+        domain="www.chatbase.co"
+        defer>
+        </script>
 
-<!-- <iframe src="https://www.chatbase.co/chatbot-iframe/mVOdLJiu4c5v0_G8SFC47" width="100%"
-style="height: 100%; min-height: 700px" frameborder="0"></iframe> -->
+    <!-- <iframe src="https://www.chatbase.co/chatbot-iframe/E1jSPw4PdfR0c_OE-8kWS" width="100%"
+        style="height: 100%; min-height: 700px" frameborder="0"></iframe> -->
 
     <!--=============== SCROLL REVEAL ===============-->
     <script src="https://unpkg.com/scrollreveal"></script>
@@ -410,6 +409,7 @@ style="height: 100%; min-height: 700px" frameborder="0"></iframe> -->
     <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
 
     <script src="./JS/main.js"></script>
+    <script src="https://plugin.handtalk.me/web/latest/handtalk.min.js"></script>
 </body>
 
 </html>
