salvando alterações novas

--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
         <section class="discount section">
             <div class="discount__container container grid">
                 <div class="discount__animate">
-                    <h2 class="discount__title">Veja além dos obstáculos <br>caminhe com confiança</h2>
-                    <p class="discount__description">Obtenha agora, até 50% de desconto.</p>
+                    <h2 class="discount__title">Veja além dos</BR> obstáculos <br>caminhe com confiança</h2>
+                    <!-- <p class="discount__description">Obtenha agora, até 50% de desconto.</p> -->
                     <a href="form.html" class="button button--flex">
                         <i class="ri-shopping-bag-line button__icon"></i> Compre agora
                     </a>
