--- a/HTML/CEP_TOPIA.html
+++ b/HTML/CEP_TOPIA.html
@@ -7,39 +7,57 @@
     <link rel="shortcut icon" href="../img/logo-olho.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="../CSS/CEP.css">
+    <link rel="stylesheet" href="../CSS/styles.css">
 
     <title>Topia</title>
 
 </head>
 
 <body>
-    <header>
+    <header class="header" id="header">
+        <nav class="nav container">
 
-        <nav class="nav-bar">
-            <div class="logo">
-               <a href="../index.html"> <img src="../img-form/topia_fundo.png" alt="logo"></a>
+            <!-- //------------------ logo novoo---------------------- -->
+            <div class="box1">
+                <label class="switch">
+                    <input type="checkbox" id="darkModeToggle">
+                    <span class="slider round">
+                        <!-- Text inside the slider -->
+                        <h2 class="slider-text">Topia</h2>
+                    </span>
+                </label>
             </div>
-            <div class="nav-list">
-                <ul>
-                    <li class="nav-item"><a href="../index.html" class="nav-link">Pagina Inicial</a></li>
-                    <li class="nav-item"><a href="../HTML/topia.html" class="nav-link">Sobre a Topia</a></li>
+
+            <div class="nav__menu" id="nav-menu">
+                <ul class="nav__list">
+                    <li class="nav__item">
+                        <a href="#home" class="nav__link active-link">Home</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#specs" class="nav__link">Sobre</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#case" class="nav__link">Visão Guia</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="HTML/CEP_TOPIA.html" class="nav__link">Comprar</a>
+                    </li>
+                    <li class="nav__item">
+                        <a id="cadastro" href="/HTML/topia.html"  class="nav__link">Consultar especialista</a>
+                    </li>
                 </ul>
+
+                <div class="nav__close" id="nav-close">
+                    <i class="ri-close-line"></i>
+                </div>
             </div>
 
-            <div class="mobile-menu-icon">
-                <button onclick="menuShow()"><img class="icon" src="../img/menu_white_36dp.svg"
-                        alt="Botão de menu"></button>
+            <div class="nav__toggle" id="nav-toggle">
+                <i class="ri-function-line"></i>
             </div>
         </nav>
-        <div class="mobile-menu">
-            <ul>
-                <li class="nav-item"><a href="../index.html" class="nav-link">Pagina Inicial</a></li>
-                <li class="nav-item"><a href="../HTML/topia.html" class="nav-link">Sobre a Topia</a></li>
-            </ul>
-
-
-        </div>
     </header>
+
 
     <main>
         <div class="container">
@@ -94,81 +112,98 @@
     </main>
 
 
-    <footer>
-        <div id="footer_content">
-            <div id="footer_contacts">
-                <div class="logofo"><a href="../index.html">
-                        <img href="init" src="../img-form/topia.png" width="80vw" alt="logo"></a>
-                    <!-- <p>Fluxus</p> -->
-                </div>
+    <!--=============== RODAPÉ ===============-->
+    <footer class="footer section">
+        <div class="footer__container container grid">
 
-                <div id="footer_social_media">
+            <div class="footer__content">
+                <h3 class="footer__title">Produtos</h3>
 
-                    <a href="https://www.instagram.com/" target="_blank" class="footer-link" id="instagram">
-                        <i class="fa-brands fa-instagram"></i>
-                    </a>
-
-                    <a href="https://www.facebook.com/" target="_blank" class="footer-link" id="facebook">
-                        <i class="fa-brands fa-facebook-f"></i>
-                    </a>
-
-                    <a href="https://www.whatsapp.com/" target="_blank" class="footer-link" id="whatsapp">
-                        <i class="fa-brands fa-whatsapp"></i>
-                    </a>
-                </div>
+                <ul class="footer__links">
+                    <li>
+                        <a href="#" class="footer__link">Óculos</a>
+                    </li>
+                </ul>
             </div>
-            <ul class="footer-list">
-                <li>
-                    <h3>Sobre Nós</h3>
-                </li>
-                <li>
-                    <a href="../index.html" class="footer-link">Historia</a>
-                </li>
-                <li>
-                    <a href="../index.html" class="footer-link">Missão, Vissão e Valores</a>
-                </li>
-                <li>
-                    <a href="../index.html" class="footer-link">Visão</a>
-                </li>
-            </ul>
 
-            <ul class="footer-list">
-                <li>
-                    <h3>Projetos</h3>
-                </li>
-                <li>
-                    <a href="../index.html" class="footer-link">Topia + Vagalume</a>
-                </li>
-                <li>
-                    <a href="../index.html" class="footer-link">Topia nas Escolas</a>
-                </li>
-                <li>
-                    <a href="../index.html" class="footer-link">Topia + Rio Grande do Sul</a>
-                </li>
-            </ul>
+            <div class="footer__content">
+                <h3 class="footer__title">Suporte</h3>
 
-            <div id="footer_subscribe">
-                <h3>Se inscreva!</h3>
+                <ul class="footer__links">
+                    <li>
+                        <a href="#" class="footer__link">Ajuda do produto</a>
+                    </li>
+                    <li>
+                        <a href="#" class="footer__link">Registro</a>
+                    </li>
+                    <li>
+                        <a href="#" class="footer__link">Atualizações</a>
+                    </li>
+                    <li>
+                        <a href="#" class="footer__link">Ofertas</a>
+                    </li>
+                </ul>
+            </div>
 
-                <p>
-                    Digite seu e-mail e seja notificado sobre nossas novidades.
-                </p>
-
-                <div id="input_group">
-                    <input type="email" id="email">
-                    <button>
-                        <a href="mailto:reusedecor@outlook.com" target="l"><i class="fa-regular fa-envelope"></i></a>
+            <div class="footer__content">
+                <form action="" class="footer__form">
+                    <input type="email" placeholder="E-mail" class="footer__input">
+                    <button class="button button--flex">
+                        <i class="ri-send-plane-line button__icon"></i> Inscrever-se
                     </button>
+                </form>
+
+                <div class="footer__social">
+                    <a href="https://www.facebook.com/" target="_blank" class="footer__social-link">
+                        <i class="ri-facebook-fill"></i>
+                    </a>
+                    <a href="https://www.instagram.com/" target="_blank" class="footer__social-link">
+                        <i class="ri-instagram-line"></i>
+                    </a>
+                    <a href="https://twitter.com/" target="_blank" class="footer__social-link">
+                        <i class="ri-twitter-line"></i>
+                    </a>
                 </div>
             </div>
         </div>
-        <div id="footer_copyright">
-            &#169
-            2024 Topia.
-        </div>
+
+        <p class="footer__copy">
+            <!-- Melhorar o footer -->
+            <a href="#" target="_blank" class="footer__copy-link">&#169; Topia. Todos
+                os direitos reservados</a>
+        </p>
     </footer>
 
-<script src="../JS/CEP.js"></script>
-</body>
+    <!--=============== SCROLL UP ===============-->
+    <a href="#" class="scrollup" id="scroll-up">
+        <i class="ri-arrow-up-s-line scrollup__icon"></i>
+    </a>
 
+    <!--=============== CHAT IA ===============-->
+    <script>
+        window.embeddedChatbotConfig = {
+        chatbotId: "E1jSPw4PdfR0c_OE-8kWS",
+        domain: "www.chatbase.co"
+        }
+        </script>
+        <script
+        src="https://www.chatbase.co/embed.min.js"
+        chatbotId="E1jSPw4PdfR0c_OE-8kWS"
+        domain="www.chatbase.co"
+        defer>
+        </script>
+
+<!-- <iframe src="https://www.chatbase.co/chatbot-iframe/mVOdLJiu4c5v0_G8SFC47" width="100%"
+style="height: 100%; min-height: 700px" frameborder="0"></iframe> -->
+
+    <!--=============== SCROLL REVEAL ===============-->
+    <script src="https://unpkg.com/scrollreveal"></script>
+
+    <!--=============== JS PRINCIPAL ===============-->
+
+    <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+
+    <script src="./JS/main.js"></script>
+    <script src="https://plugin.handtalk.me/web/latest/handtalk.min.js"></script>
+</body>
 </html>
