salvando alterações novas

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <a href="HTML/CEP_TOPIA.html" class="nav__link">Comprar</a>
                     </li>
                     <li class="nav__item">
-                        <a id="cadastro" href="/HTML/topia.html"  class="nav__link">Consultar especialista</a>
+                        <a id="cadastro" href="https://call.whatsapp.com/video/iNreqgtTvzvaK8GD1HW0Fu"  class="nav__link">Consultar especialista</a>
                     </li>
                 </ul>
 
@@ -197,9 +197,9 @@
                 <div class="discount__animate">
                     <h2 class="discount__title">Veja além dos</BR> obstáculos <br>caminhe com confiança</h2>
                     <!-- <p class="discount__description">Obtenha agora, até 50% de desconto.</p> -->
-                    <a href="form.html" class="button button--flex">
+                    <!-- <a href="form.html" class="button button--flex">
                         <i class="ri-shopping-bag-line button__icon"></i> Compre agora
-                    </a>
+                    </a> -->
                 </div>
 
                 <!-- <img src="capa_carol.png" alt="" class="discount__img"> -->
@@ -413,5 +413,4 @@ style="height: 100%; min-height: 700px" frameborder="0"></iframe> -->
     <script src="./JS/main.js"></script>
     <script src="https://plugin.handtalk.me/web/latest/handtalk.min.js"></script>
 </body>
-
 </html>
