--- a/index.html
+++ b/index.html
@@ -8,10 +8,6 @@
     <!--=============== FAVICON ===============-->
     <link rel="shortcut icon" href="img/logo-olho.png" type="image/x-icon">
 
-    <script>
-        new window.VLibras.Widget('https://vlibras.gov.br/app');
-    </script>
-
     <!--=============== ÍCONES REMIX ===============-->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 
@@ -70,7 +66,8 @@
                         <a href="HTML/CEP_TOPIA.html" class="nav__link">Comprar</a>
                     </li>
                     <li class="nav__item">
-                        <a id="cadastro" href="https://call.whatsapp.com/video/iNreqgtTvzvaK8GD1HW0Fu"  class="nav__link">Consultar especialista</a>
+                        <a id="cadastro" href="https://call.whatsapp.com/video/iNreqgtTvzvaK8GD1HW0Fu"
+                            class="nav__link">Consultar especialista</a>
                     </li>
                 </ul>
 
@@ -93,7 +90,7 @@
         <section class="home section" id="home">
             <div class="home__container container grid">
                 <div>
-                    <img src="oculos_carol.png" alt="" class="home__img">
+                    <img src="oculos_carol.png" alt="Óculos lançamento vision flex, astes e armação da cor preta, e lentes da cor tranparente" class="home__img">
                 </div>
 
                 <div class="home__data">
@@ -142,13 +139,13 @@
                         <img class="icon-fone" src="img/icon_fones.png" alt="">
 
                         <h3 class="specs__title">Conexão</h3>
-                        <span class="specs__subtitle">Bluetooth v5.2</span>
+                        <span class="specs__subtitle">Embutido nas astes</span>
                     </div>
 
                     <div class="specs__data">
                         <i class="ri-battery-charge-line specs__icon"></i>
                         <h3 class="specs__title">Bateria</h3>
-                        <span class="specs__subtitle">Duração 40h</span>
+                        <span class="specs__subtitle">Duração 48h</span>
                     </div>
 
                     <div class="specs__data">
@@ -165,7 +162,7 @@
                     </div>
                 </div>
                 <div>
-                    <img src="oculos_carol2.png" alt="" class="specs__img">
+                    <img src="oculos_carol2.png" alt="Case dos óculos da topia. Case preto com nosso logo na abertura." class="specs__img">
                 </div>
 
             </div>
@@ -389,28 +386,21 @@
     <!--=============== CHAT IA ===============-->
     <script>
         window.embeddedChatbotConfig = {
-        chatbotId: "E1jSPw4PdfR0c_OE-8kWS",
-        domain: "www.chatbase.co"
+            chatbotId: "aJZbZRTVp7cR-2DMjj1j0",
+            domain: "www.chatbase.co"
         }
-        </script>
-        <script
-        src="https://www.chatbase.co/embed.min.js"
-        chatbotId="E1jSPw4PdfR0c_OE-8kWS"
-        domain="www.chatbase.co"
-        defer>
-        </script>
+    </script>
+    <script src="https://www.chatbase.co/embed.min.js" chatbotId="aJZbZRTVp7cR-2DMjj1j0" domain="www.chatbase.co" defer>
+    </script>
 
-<!-- <iframe src="https://www.chatbase.co/chatbot-iframe/mVOdLJiu4c5v0_G8SFC47" width="100%"
-style="height: 100%; min-height: 700px" frameborder="0"></iframe> -->
+    <!-- <iframe src="https://www.chatbase.co/chatbot-iframe/aJZbZRTVp7cR-2DMjj1j0" width="100%"
+        style="height: 100%; min-height: 700px" frameborder="0"></iframe> -->
 
     <!--=============== SCROLL REVEAL ===============-->
     <script src="https://unpkg.com/scrollreveal"></script>
 
     <!--=============== JS PRINCIPAL ===============-->
 
-    <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
-
     <script src="./JS/main.js"></script>
-    <script src="https://plugin.handtalk.me/web/latest/handtalk.min.js"></script>
 </body>
 </html>
