--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
                     <li class="nav__item">
                         <a href="#case" class="nav__link">Visão Guia</a>
                     </li>
-                    <li class="nav__item">
+                    <!-- <li class="nav__item">
                         <a href="HTML/CEP_TOPIA.html" class="nav__link">Comprar</a>
-                    </li>
+                    </li> -->
                     <li class="nav__item">
-                        <a id="cadastro" href="https://call.whatsapp.com/video/iNreqgtTvzvaK8GD1HW0Fu"
+                        <a id="cadastro" href="https://meet.google.com/vwa-pjwh-agg?hs=224"
                             class="nav__link">Consultar especialista</a>
                     </li>
                 </ul>
