Teste de responsividade navbar

--- a/index.html
+++ b/index.html
@@ -107,10 +107,8 @@
                             sonoras, receba assistência por voz, interaja intuitivamente e desfrute de áudio imersivo.
                             VisionFlex - veja mais, viva mais.
                         </p>
-                        <a href="form.html" class="button button--flex">
-                            <span class="button--flex">
-                                <i class="ri-shopping-bag-line button__icon"></i></i> Adicionar ao Carrinho
-                            </span>
+                        <a href="index.html" class="button button--flex">
+                          
                             <span class="home__price">Saiba Mais</span>
                         </a>
                     </div>
